--- a/forms/_play.yaml
+++ b/forms/_play.yaml
@@ -7,9 +7,11 @@ components:
   layout_properties: {slot: default}
   components:
   - type: ColumnPanel
-    properties: {}
+    properties: {role: null, width: default, border: '', foreground: '', visible: true,
+      row_spacing: 10, wrap_on: mobile, spacing_above: small, col_widths: '', spacing_below: small,
+      background: ''}
     name: top_contacts
-    layout_properties: {grid_position: 'WTMRGI,VMPLHM'}
+    layout_properties: {grid_position: 'WTMRGI,VMPLHM', full_width_row: true}
 - type: Label
   properties: {role: null, width: default, align: left, border: '', foreground: '',
     visible: true, text: Catch, font_size: 22, font: '', spacing_above: small, icon_align: left,
