--- a/forms/GameListElement.yaml
+++ b/forms/GameListElement.yaml
@@ -6,7 +6,7 @@ container:
 components:
 - type: ColumnPanel
   properties: {role: null, width: default, border: '', foreground: '', visible: true,
-    row_spacing: 10, wrap_on: mobile, spacing_above: small, col_widths: '{}', spacing_below: small,
+    row_spacing: 10, wrap_on: never, spacing_above: small, col_widths: '{}', spacing_below: small,
     background: ''}
   name: card_content
   layout_properties: {grid_position: 'QUMGQI,KEWNOY', full_width_row: true}
@@ -17,7 +17,7 @@ components:
       spacing_above: small, icon_align: left, col_widths: '{}', spacing_below: small,
       italic: false, background: '', bold: false, underline: false, icon: ''}
     name: game_summary
-    layout_properties: {grid_position: 'VCCQBS,OLBDSW'}
+    layout_properties: {grid_position: 'VCCQBS,OLBDSW', full_width_row: true}
     components:
     - type: Label
       properties: {role: null, width: default, align: left, border: '', foreground: '',
@@ -49,7 +49,7 @@ components:
     event_bindings: {click: expand}
   - type: ColumnPanel
     properties: {role: null, width: default, border: '', foreground: '', visible: true,
-      row_spacing: 10, wrap_on: mobile, spacing_above: small, col_widths: '', spacing_below: small,
+      row_spacing: 10, wrap_on: never, spacing_above: small, col_widths: '', spacing_below: small,
       background: ''}
     name: game_view
     layout_properties: {grid_position: 'PUYBPX,ENQFEK', full_width_row: true}
