--- a/forms/PlayWall.yaml
+++ b/forms/PlayWall.yaml
@@ -1,7 +1,7 @@
 components:
 - type: Link
   properties: {role: null, width: default, align: left, border: '', foreground: '',
-    visible: true, text: '', font_size: null, row_spacing: 10, wrap_on: mobile, font: '',
+    visible: true, text: '', font_size: null, row_spacing: 10, wrap_on: never, font: '',
     spacing_above: small, icon_align: left, col_widths: '{}', spacing_below: small,
     italic: false, background: '', bold: false, underline: false, icon: ''}
   name: link_1
