--- a/forms/_play.yaml
+++ b/forms/_play.yaml
@@ -8,7 +8,7 @@ components:
   components:
   - type: ColumnPanel
     properties: {role: null, width: default, border: '', foreground: '', visible: true,
-      row_spacing: 10, wrap_on: mobile, spacing_above: small, col_widths: '', spacing_below: small,
+      row_spacing: 10, wrap_on: never, spacing_above: small, col_widths: '', spacing_below: small,
       background: ''}
     name: top_contacts
     layout_properties: {grid_position: 'WTMRGI,VMPLHM', full_width_row: true}
