--- a/forms/GameListWall.yaml
+++ b/forms/GameListWall.yaml
@@ -13,28 +13,13 @@ components:
     name: game_summary
     layout_properties: {}
     components:
-    - type: ColumnPanel
-      properties: {role: null, width: default, border: '', foreground: '', visible: true,
-        row_spacing: 10, wrap_on: never, spacing_above: small, col_widths: '{}', spacing_below: small,
-        background: ''}
-      name: column_panel_1
-      layout_properties: {grid_position: 'JXMJZB,KGYHBS'}
-      components:
-      - type: Label
-        properties: {role: null, width: default, align: center, border: '', foreground: '',
-          visible: true, text: WALL, font_size: 16, font: '', spacing_above: small,
-          icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-          underline: false, icon: ''}
-        name: you_label
-        layout_properties: {grid_position: 'TESMPT,ANNGFL'}
-        data_bindings: []
-      - type: Label
-        properties: {role: null, width: default, align: center, border: '', foreground: '',
-          visible: true, text: '', font_size: 13, font: '', spacing_above: small,
-          icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-          underline: false, icon: ''}
-        name: num_throws
-        layout_properties: {grid_position: 'TESMPT,VXQENK'}
+    - type: Label
+      properties: {role: null, width: default, align: center, border: '', foreground: '',
+        visible: true, text: '', font_size: 16, font: '', spacing_above: small, icon_align: left,
+        spacing_below: small, italic: false, background: '', bold: false, underline: false,
+        icon: ''}
+      name: num_throws
+      layout_properties: {grid_position: 'WVACUI,UWDFBL'}
     event_bindings: {click: expand}
   - type: LinearPanel
     properties: {role: game-container, width: default, border: '', foreground: '',
