--- a/forms/Login.yaml
+++ b/forms/Login.yaml
@@ -1,13 +1,9 @@
 container:
   type: ColumnPanel
-  properties: {role: null, width: default, border: '', foreground: '', visible: true,
-    row_spacing: 10, wrap_on: never, spacing_above: none, col_widths: '{"VSBJRI":30}',
-    spacing_below: small, background: ''}
+  properties: {role: dialog, width: default, border: '', foreground: '', visible: true,
+    row_spacing: 10, wrap_on: never, spacing_above: none, col_widths: '{}', spacing_below: small,
+    background: ''}
 components:
-- type: ColumnPanel
-  properties: {}
-  name: title_panel
-  layout_properties: {grid_position: 'JPNRLE,PNYQVO'}
 - type: Label
   properties: {role: null, width: default, align: left, border: '', foreground: '',
     visible: true, text: 'Login (or create new account):', font_size: null, font: '',
