--- a/forms/LoginScreen.yaml
+++ b/forms/LoginScreen.yaml
@@ -15,6 +15,21 @@ components:
   properties: {}
   name: logged_in_label
   layout_properties: {slot: nav-right}
+- type: Link
+  properties: {role: null, width: default, url: 'mailto:support@catchapp.com', align: left,
+    border: '', foreground: '', visible: true, text: help!, font_size: null, row_spacing: 10,
+    wrap_on: never, font: '', spacing_above: small, icon_align: left, col_widths: '',
+    spacing_below: small, italic: false, background: '', bold: false, underline: false,
+    icon: ''}
+  name: link_1
+  layout_properties: {slot: sidebar}
+- type: Link
+  properties: {role: null, width: default, align: left, border: '', foreground: '',
+    visible: true, text: About, font_size: null, row_spacing: 10, wrap_on: mobile,
+    font: '', spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
+    italic: false, background: '', bold: false, underline: false, icon: ''}
+  name: link_2
+  layout_properties: {slot: sidebar}
 container:
   type: HtmlTemplate
   properties: {html: '@theme:standard-page.html'}
