--- a/forms/MyAccountScreen.yaml
+++ b/forms/MyAccountScreen.yaml
@@ -7,7 +7,7 @@ components:
   layout_properties: {slot: default}
   components:
   - type: ColumnPanel
-    properties: {role: null, width: default, border: '', foreground: '', visible: true,
+    properties: {role: dialog, width: default, border: '', foreground: '', visible: true,
       row_spacing: 10, wrap_on: never, spacing_above: small, col_widths: '{}', spacing_below: small,
       background: ''}
     name: column_panel_1
@@ -124,6 +124,14 @@ components:
         underline: false, icon: ''}
       name: reset_go_button
       layout_properties: {grid_position: 'NKIZOZ,HVBQMY'}
+    - type: Button
+      properties: {role: null, width: default, align: center, border: '', enabled: true,
+        foreground: '', visible: true, text: Back to games, font_size: null, font: '',
+        spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+        background: '', bold: false, underline: false, icon: ''}
+      name: back_to_games_button
+      layout_properties: {grid_position: 'FPMFFR,RKCVHA'}
+      event_bindings: {click: back_to_games_button_click}
 - type: Label
   properties: {role: null, width: default, align: left, border: '', foreground: '',
     visible: true, text: Catch, font_size: 22, font: '', spacing_above: small, icon_align: left,
@@ -140,9 +148,9 @@ components:
     foreground: '', visible: true, text: Go to games, font_size: 18, font: '', spacing_above: small,
     icon_align: left, spacing_below: small, italic: false, background: '#92bf89',
     bold: true, underline: false, icon: ''}
-  name: button_1
+  name: menu_games_button
   layout_properties: {slot: sidebar}
-  event_bindings: {click: button_1_click}
+  event_bindings: {click: back_to_games_button_click}
 - type: Spacer
   properties: {height: 32}
   name: spacer_1
