--- a/forms/GameListWall.yaml
+++ b/forms/GameListWall.yaml
@@ -15,16 +15,15 @@ components:
     components:
     - type: Label
       properties: {role: null, width: default, align: center, border: '', foreground: '',
-        visible: true, text: '', font_size: 16, font: '', spacing_above: small, icon_align: left,
-        spacing_below: small, italic: false, background: '', bold: false, underline: false,
+        visible: true, text: '', font_size: 16, font: '', spacing_above: none, icon_align: left,
+        spacing_below: none, italic: false, background: '', bold: false, underline: false,
         icon: ''}
       name: num_throws
       layout_properties: {grid_position: 'WVACUI,UWDFBL'}
     event_bindings: {click: expand}
   - type: LinearPanel
     properties: {role: game-container, width: default, border: '', foreground: '',
-      visible: true, row_spacing: 10, spacing_above: small, spacing_below: small,
-      background: ''}
+      visible: true, row_spacing: 10, spacing_above: none, spacing_below: none, background: ''}
     name: game_view
     layout_properties: {grid_position: 'DBHMUX,XKHIAS', full_width_row: true}
     event_bindings: {show: game_view_show}
