--- a/forms/AddContacts.yaml
+++ b/forms/AddContacts.yaml
@@ -1,15 +1,22 @@
 components:
 - type: Label
   properties: {role: null, width: default, align: center, border: '', foreground: '',
-    visible: true, text: 'Add a friend with their phone number:', font_size: 18, font: '',
-    spacing_above: small, icon_align: left, spacing_below: large, italic: false, background: '',
-    bold: true, underline: false, icon: ''}
+    visible: true, text: Add a friend!, font_size: 22, font: '', spacing_above: large,
+    icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
+    underline: false, icon: ''}
   name: label_get_contacts
   layout_properties: {grid_position: 'OROBJO,DMOCEV'}
 - type: Label
+  properties: {role: null, width: default, align: left, border: '', foreground: '',
+    visible: true, text: Enter a phone number to connect on Catch. We'll generate a text message with a link for you to customize and send!,
+    font_size: 18, font: '', spacing_above: small, icon_align: left, spacing_below: small,
+    italic: false, background: '', bold: false, underline: false, icon: ''}
+  name: label_1
+  layout_properties: {grid_position: 'WUNIIX,JFDBEL'}
+- type: Label
   properties: {role: null, width: default, align: center, border: '', foreground: '',
     visible: true, text: 'Phone number:', font_size: 22, font: '', spacing_above: none,
-    icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
+    icon_align: left, spacing_below: none, italic: false, background: '', bold: true,
     underline: false, icon: ''}
   name: label_phone
   layout_properties: {grid_position: 'TVWPNT,WPKKON'}
