--- a/forms/AddContacts.yaml
+++ b/forms/AddContacts.yaml
@@ -1,11 +1,11 @@
 components:
 - type: Label
   properties: {role: null, width: default, align: center, border: '', foreground: '',
-    visible: true, text: Add a friend!, font_size: 22, font: '', spacing_above: large,
-    icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
-    underline: false, icon: ''}
+    visible: true, text: Add a friend!, font_size: 22, font: '', spacing_above: small,
+    icon_align: top, spacing_below: small, italic: false, background: '', bold: true,
+    underline: false, icon: 'fa:arrow-circle-down'}
   name: label_get_contacts
-  layout_properties: {grid_position: 'OROBJO,DMOCEV'}
+  layout_properties: {grid_position: 'OROBJO,HEIMXZ'}
 - type: Label
   properties: {role: null, width: default, align: left, border: '', foreground: '',
     visible: true, text: Enter a phone number to connect on Catch. We'll generate a text message with a link for you to customize and send!,
