--- a/forms/GameListElement.yaml
+++ b/forms/GameListElement.yaml
@@ -19,7 +19,7 @@ components:
     layout_properties: {grid_position: 'VCCQBS,OLBDSW', full_width_row: true}
     components:
     - type: Label
-      properties: {role: null, width: default, align: center, border: '', foreground: '',
+      properties: {role: null, width: default, align: left, border: '', foreground: '',
         visible: true, text: '', font_size: 16, font: '', spacing_above: none, icon_align: left,
         spacing_below: none, italic: false, background: '', bold: false, underline: false,
         icon: ''}
