--- a/forms/GameListRobot.yaml
+++ b/forms/GameListRobot.yaml
@@ -9,13 +9,13 @@ components:
     properties: {role: null, width: default, align: left, border: '', foreground: '',
       visible: true, text: '', font_size: null, row_spacing: 10, wrap_on: never, font: '',
       spacing_above: none, icon_align: left_edge, col_widths: '{"SJLVYU":50}', spacing_below: none,
-      italic: false, background: '', bold: false, underline: false, icon: ''}
+      italic: false, background: '', bold: false, underline: false, icon: 'fa:arrow-circle-right'}
     name: game_summary
     layout_properties: {grid_position: 'VCCQBS,OLBDSW', full_width_row: true}
     components:
     - type: Label
-      properties: {role: null, width: default, align: center, border: '', foreground: '',
-        visible: true, text: '', font_size: 16, font: '', spacing_above: none, icon_align: left,
+      properties: {role: null, width: default, align: left, border: '', foreground: '',
+        visible: true, text: '', font_size: 16, font: '', spacing_above: none, icon_align: left_edge,
         spacing_below: none, italic: false, background: '', bold: false, underline: false,
         icon: ''}
       name: status_label
