--- a/forms/GameListWall.yaml
+++ b/forms/GameListWall.yaml
@@ -9,17 +9,17 @@ components:
     properties: {role: null, width: default, align: left, border: '', foreground: '',
       visible: true, text: '', font_size: null, row_spacing: 10, wrap_on: never, font: '',
       spacing_above: none, icon_align: left_edge, col_widths: '{}', spacing_below: none,
-      italic: false, background: '', bold: false, underline: false, icon: ''}
+      italic: false, background: '', bold: false, underline: false, icon: 'fa:arrow-circle-right'}
     name: game_summary
     layout_properties: {}
     components:
     - type: Label
-      properties: {role: null, width: default, align: center, border: '', foreground: '',
-        visible: true, text: '', font_size: 16, font: '', spacing_above: none, icon_align: left,
+      properties: {role: null, width: default, align: left, border: '', foreground: '',
+        visible: true, text: '', font_size: 16, font: '', spacing_above: none, icon_align: left_edge,
         spacing_below: none, italic: false, background: '', bold: false, underline: false,
         icon: ''}
       name: num_throws
-      layout_properties: {grid_position: 'WVACUI,UWDFBL'}
+      layout_properties: {grid_position: 'WVACUI,DWTVCT'}
     event_bindings: {click: expand}
   - type: LinearPanel
     properties: {role: game-container, width: default, border: '', foreground: '',
