--- a/forms/GameListRobot.yaml
+++ b/forms/GameListRobot.yaml
@@ -1,7 +1,7 @@
 components:
 - type: LinearPanel
   properties: {role: game-container, width: default, border: '', foreground: '', visible: true,
-    row_spacing: 10, spacing_above: small, spacing_below: small, background: ''}
+    row_spacing: 10, spacing_above: none, spacing_below: none, background: ''}
   name: card_content
   layout_properties: {grid_position: 'EJLVNM,PNQTCR', full_width_row: true}
   components:
