--- a/forms/MyAccountScreen.yaml
+++ b/forms/MyAccountScreen.yaml
@@ -6,64 +6,113 @@ components:
   name: content_panel
   layout_properties: {slot: default}
   components:
+  - type: Label
+    properties: {role: null, width: default, align: left, border: '', foreground: '',
+      visible: true, text: Add Catch to your Home Screen!, font_size: 22, font: '',
+      spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+      background: '', bold: true, underline: false, icon: ''}
+    name: label_6
+    layout_properties: {grid_position: 'QHWQNO,BPEUZJ'}
   - type: ColumnPanel
-    properties: {role: dialog, width: default, border: '', foreground: '', visible: true,
-      row_spacing: 10, wrap_on: never, spacing_above: small, col_widths: '{}', spacing_below: small,
-      background: ''}
-    name: column_panel_1
-    layout_properties: {grid_position: 'GOIVFQ,SLCDRX'}
+    properties: {col_widths: '{}'}
+    name: help_panel
+    layout_properties: {grid_position: 'LFEYEY,IPBHPV'}
     components:
     - type: Label
       properties: {role: null, width: default, align: left, border: '', foreground: '',
-        visible: true, text: 'username:', font_size: null, font: '', spacing_above: small,
+        visible: true, text: 'Catch will eventually be a fully functional app like
+          all your other phone apps, but for this early version we’ve made Catch a
+          web based app.  You’ll need to open the link we texted you in your browser
+          and save the page as a bookmark. Then you can use the “add to home screen”
+          function on iOS or Android so that you can find Catch right next to your
+          favorite apps on your home screen.', font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: ''}
+      name: help_text
+      layout_properties: {grid_position: 'ZDTXZZ,KNRFCQ'}
+    - type: Label
+      properties: {role: null, width: default, align: left, border: '', foreground: '',
+        visible: true, text: 'For iOS (Apple devices):
+
+          Inside Catch, tap the “share” icon at the bottom of your browser. Then select
+          “Add to Home Screen” from the menu and you’re all set. The Catch icon and
+          app will appear on your home screen.
+
+          ', font_size: null, font: '', spacing_above: small, icon_align: left, spacing_below: small,
+        italic: false, background: '', bold: false, underline: false, icon: ''}
+      name: label_5
+      layout_properties: {grid_position: 'LXYNWI,VELYQR'}
+    - type: Image
+      properties: {}
+      name: image_1
+      layout_properties: {grid_position: 'AHJEJR,MUBSKS'}
+    - type: Label
+      properties: {role: null, width: default, align: left, border: '', foreground: '',
+        visible: true, text: 'For Android:
+
+          Inside catch, tap the “more” icon at the top right of your browser. Then
+          select “Add to Home Screen” from the menu and you’re all set. The Catch
+          icon and app will appear on your home screen.', font_size: null, font: '',
+        spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+        background: '', bold: false, underline: false, icon: ''}
+      name: label_4
+      layout_properties: {grid_position: 'OTFKUF,UARQXW'}
+  - type: ColumnPanel
+    properties: {col_widths: '{}'}
+    name: account_panel
+    layout_properties: {grid_position: 'QOLFPI,ZAZEXN'}
+    components:
+    - type: Label
+      properties: {role: null, width: default, align: left, border: '', foreground: '',
+        visible: true, text: 'Username:', font_size: null, font: '', spacing_above: small,
         icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
         underline: false, icon: ''}
       name: username
-      layout_properties: {grid_position: 'SQPTST,ZCWFRI'}
+      layout_properties: {grid_position: 'EDAHQF,PLHLHE'}
     - type: Label
       properties: {}
       name: handle_label
-      layout_properties: {grid_position: 'SQPTST,HQKEQF'}
+      layout_properties: {grid_position: 'EDAHQF,OLXMMF'}
     - type: Label
       properties: {role: null, width: default, align: left, border: '', foreground: '',
-        visible: true, text: 'phone number:', font_size: null, font: '', spacing_above: small,
+        visible: true, text: 'Phone number:', font_size: null, font: '', spacing_above: small,
         icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
         underline: false, icon: ''}
       name: label_2
-      layout_properties: {grid_position: 'LGHALA,DWSBRK'}
+      layout_properties: {grid_position: 'OVZUFB,JGQCPG'}
     - type: Label
       properties: {}
       name: phone_number_label
-      layout_properties: {grid_position: 'LGHALA,SJVFVE'}
+      layout_properties: {grid_position: 'OVZUFB,JRJVVF'}
     - type: Label
       properties: {role: null, width: default, align: left, border: '', foreground: '',
-        visible: true, text: 'throws:', font_size: null, font: '', spacing_above: small,
+        visible: true, text: 'Total throws:', font_size: null, font: '', spacing_above: small,
         icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
         underline: false, icon: ''}
       name: label_3
-      layout_properties: {grid_position: 'TDRBCH,TFQYVE'}
+      layout_properties: {grid_position: 'AXPJOJ,VEZMQT'}
     - type: Label
       properties: {}
       name: throws_label
-      layout_properties: {grid_position: 'TDRBCH,DTJRYF'}
+      layout_properties: {grid_position: 'AXPJOJ,VLWYPL'}
     - type: Spacer
       properties: {height: 32}
       name: spacer_3
-      layout_properties: {grid_position: 'PSOPTF,LSUDKP'}
+      layout_properties: {grid_position: 'FRGUGF,YIMKLB'}
     - type: Label
       properties: {role: null, width: default, align: left, border: '', foreground: '',
         visible: true, text: Hex color 1, font_size: null, font: '', spacing_above: small,
         icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
         underline: false, icon: ''}
       name: color1
-      layout_properties: {grid_position: 'LHIFPN,XGKQXW'}
+      layout_properties: {grid_position: 'LARUSL,EWJGMS'}
     - type: TextBox
       properties: {role: null, width: default, align: left, hide_text: false, placeholder: '',
         border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
         font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
         background: '', bold: false, underline: false}
       name: enter_color_1
-      layout_properties: {grid_position: 'LHIFPN,EMXWFA'}
+      layout_properties: {grid_position: 'LARUSL,LKZKWC'}
     - type: Label
       properties: {role: null, width: default, align: left, border: '', foreground: '#fefcfc',
         visible: true, text: 'Hex color 2
@@ -71,67 +120,35 @@ components:
           ', font_size: null, font: '', spacing_above: small, icon_align: left, spacing_below: small,
         italic: false, background: '', bold: false, underline: false, icon: ''}
       name: color2
-      layout_properties: {grid_position: 'TVJLMY,JRBJAV'}
+      layout_properties: {grid_position: 'SFFOKA,ZUUNFZ'}
     - type: TextBox
       properties: {role: null, width: default, align: left, hide_text: false, placeholder: '',
         border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
         font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
         background: '', bold: false, underline: false}
       name: enter_color_2
-      layout_properties: {grid_position: 'TVJLMY,KFDVQG'}
+      layout_properties: {grid_position: 'SFFOKA,KZHXUG'}
     - type: Button
       properties: {role: null, width: default, align: left, border: '', enabled: true,
         foreground: '', visible: true, text: set colors, font_size: null, font: '',
         spacing_above: small, icon_align: left, spacing_below: small, italic: false,
         background: '', bold: false, underline: false, icon: ''}
       name: color_set_button
-      layout_properties: {grid_position: 'OUWCAH,GGDGLR'}
+      layout_properties: {grid_position: 'DSOWWO,FAGBXH'}
       event_bindings: {click: color_set_button_click}
     - type: Spacer
       properties: {height: 32}
       name: spacer_4
-      layout_properties: {grid_position: 'YJXASR,VETKQK'}
-    - type: Button
-      properties: {role: null, width: default, align: left, border: '', enabled: true,
-        foreground: '', visible: true, text: change password, font_size: null, font: '',
-        spacing_above: small, icon_align: left, spacing_below: small, italic: false,
-        background: '', bold: false, underline: false, icon: ''}
-      name: password_reset_button
-      layout_properties: {grid_position: 'FCHOVQ,RKQNKD'}
-      event_bindings: {click: password_button_click}
-    - type: TextBox
-      properties: {role: null, width: default, align: left, hide_text: false, placeholder: '',
-        border: '', enabled: true, foreground: '', visible: false, text: new password,
-        font_size: null, font: '', spacing_above: small, type: text, spacing_below: small,
-        italic: false, background: '', bold: false, underline: false}
-      name: text_box_1
-      layout_properties: {grid_position: 'FCHOVQ,IRAKSC LNGUDF,GOZWPQ'}
-    - type: TextBox
-      properties: {role: null, width: default, align: left, hide_text: false, placeholder: '',
-        border: '', enabled: true, foreground: '', visible: false, text: confirm password,
-        font_size: null, font: '', spacing_above: small, type: text, spacing_below: small,
-        italic: false, background: '', bold: false, underline: false}
-      name: text_box_2
-      layout_properties: {grid_position: 'FCHOVQ,IRAKSC LMPERE,KQHKCF'}
-    - type: Spacer
-      properties: {height: 32}
-      name: spacer_2
-      layout_properties: {grid_position: 'NKIZOZ,FDCIZK'}
-    - type: Button
-      properties: {role: null, width: default, align: center, border: '', enabled: true,
-        foreground: '', visible: false, text: reset, font_size: null, font: '', spacing_above: small,
-        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-        underline: false, icon: ''}
-      name: reset_go_button
-      layout_properties: {grid_position: 'NKIZOZ,HVBQMY'}
-    - type: Button
-      properties: {role: null, width: default, align: center, border: '', enabled: true,
-        foreground: '', visible: true, text: Back to games, font_size: null, font: '',
-        spacing_above: small, icon_align: left, spacing_below: small, italic: false,
-        background: '', bold: false, underline: false, icon: ''}
-      name: back_to_games_button
-      layout_properties: {grid_position: 'FPMFFR,RKCVHA'}
-      event_bindings: {click: back_to_games_button_click}
+      layout_properties: {grid_position: 'EGMKAO,VTZDAB'}
+  - type: Button
+    properties: {role: null, width: default, align: center, border: '', enabled: true,
+      foreground: '', visible: true, text: Back to games, font_size: 22, font: '',
+      spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+      background: '', bold: false, underline: false, icon: ''}
+    name: back_to_games_button
+    layout_properties: {grid_position: 'BCCETJ,EDBDGC'}
+    event_bindings: {click: back_to_games_button_click}
+  event_bindings: {show: content_panel_show}
 - type: Label
   properties: {role: null, width: default, align: left, border: '', foreground: '',
     visible: true, text: Catch, font_size: 22, font: '', spacing_above: small, icon_align: left,
